added -XX:PermSize=128m -XX:MaxPermSize=128m for test and compiler invocations